--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -7,9 +7,22 @@ import filecmp
 from pathlib import Path
 import os
 
+
 include: "rules/helper_functions.py"
 
+rule new_alg:
+    input:
+        "resources/module_templates/alg_module"
+    output:
+        directory("workflow/rules/structure_learning_algorithms/alg_module")
+    message:
+        "A template algorithm was created in {output}. The module/folder name alg_module may be changed."
+    shell:
+        "cp -r {input} {output} " 
+
 check_system_requirements()
+
+
 
 # This is a workaround. Needed a variable for the configfilename
 # and this seemed to be the only way. But there are probably better ways.
@@ -24,6 +37,8 @@ for arg in args:
 
 
 configfile: configfilename
+
+
 
 
 snakemake.utils.validate(config, "schemas/config.schema.json")
