--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -56,7 +56,7 @@ with open("workflow/schemas/tmp.config.schema.json", "w") as outfile:
 
 snakemake.utils.validate(config, "schemas/tmp.config.schema.json")
 
-Path("workflow/schemas/tmp.config.schema.json").unlink()
+#Path("workflow/schemas/tmp.config.schema.json").unlink()
 
 include: "rules/docker_images.smk"
 
