--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -164,7 +164,7 @@ include: "rules/filename_patterns.py"
 for p in Path("workflow/rules/graph/").glob("*"):
     module_name = p.name  # This is used inside the module to get their names
     if (p / "rule.smk").is_file():
-        if p.name in pattern_strings or (p.name == "fixed"):
+        if p.name in pattern_strings or (p.name == "fixed_graph"):
 
             include: Path("rules/graph/", p.name, "rule.smk")
 
@@ -173,7 +173,7 @@ for p in Path("workflow/rules/graph/").glob("*"):
 for p in Path("workflow/rules/parameters/").glob("*"):
     module_name = p.name  # This is used inside the module to get their names
     if (p / "rule.smk").is_file():
-        if (p.name in pattern_strings) or (p.name == "fixed"):
+        if (p.name in pattern_strings) or (p.name == "fixed_params"):
 
             include: Path("rules/parameters/", p.name, "rule.smk")
 
