Refactorizing the data modules

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -182,8 +182,8 @@ for p in Path("workflow/rules/parameters/").glob("*"):
 for p in Path("workflow/rules/data/").glob("*"):
     module_name = p.name  # This is used inside the module to get their names
     if (p / "rules.smk").is_file():
-
-        include: Path("rules/data/", p.name, "rules.smk")
+        if (p.name in pattern_strings) or (p.name == "fixed_data"):
+            include: Path("rules/data/", p.name, "rules.smk")
 
 
 # Include the structure_learning_algorithms modules
