--- a/workflow/envs/Dockerfile.pcalg
+++ b/workflow/envs/Dockerfile.pcalg
@@ -1,7 +1,10 @@
-FROM r-base
+FROM r-base:4.2.3
 
-RUN R -e "if (!requireNamespace(\"BiocManager\", quietly = TRUE)) {install.packages(\"BiocManager\", repo=\"http://cran.rstudio.com/\")}" --no-save 
-RUN R -e "BiocManager::install()"  --no-save 
-RUN R -e "BiocManager::install(c(\"gRbase\", \"RBGL\", \"Rgraphviz\", \"gRain\"))" --no-save 
-RUN R -e "install.packages(\"pcalg\")" --no-save
 RUN R -e "install.packages(\"R.utils\", repos=\"https://cran.rstudio.com\")" --no-save
+RUN R -e "if (!requireNamespace(\"BiocManager\", quietly = TRUE)) {install.packages(\"BiocManager\", repo=\"http://cran.rstudio.com/\")}" --no-save
+RUN R -e "BiocManager::install()" --no-save
+RUN R -e "BiocManager::install(\"gRbase\")" --no-save
+RUN R -e "BiocManager::install(\"RBGL\")" --no-save
+RUN R -e "BiocManager::install(\"Rgraphviz\")" --no-save
+RUN R -e "BiocManager::install(\"gRain\")" --no-save
+RUN R -e "install.packages(\"pcalg\")" --no-save
