--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -136,6 +136,9 @@ for p in Path("workflow/rules/data/").glob("*"):
     if (p / "rules.smk").is_file():
         if (p.name in pattern_strings) or (p.name == "fixed_data"):
             include: Path("rules/data/", p.name, "rules.smk")
+    if (p / "rule.smk").is_file():
+        if (p.name in pattern_strings):
+            include: Path("rules/data/", p.name, "rule.smk")
 
 
 # Include the structure_learning_algorithms modules
