Fixing Dockerfile for dualgl

--- a/workflow/rules/structure_learning_algorithms/dualGraphLearner/Dockerfile
+++ b/workflow/rules/structure_learning_algorithms/dualGraphLearner/Dockerfile
@@ -16,5 +16,5 @@ RUN R -e "install.packages('speedglm', repos='http://cran.us.r-project.org')"
 
 RUN apt install wget -y
 RUN wget https://cran.r-project.org/src/contrib/Archive/equSA/equSA_1.2.1.tar.gz
-RUN install.packages("equSA_1.2.1.tar.gz", repos = NULL, type="source")
+RUN R -e 'install.packages("equSA_1.2.1.tar.gz", repos = NULL, type="source")'
 
