--- a/workflow/rules/structure_learning_algorithms/dualGraphLearner/Dockerfile
+++ b/workflow/rules/structure_learning_algorithms/dualGraphLearner/Dockerfile
@@ -9,7 +9,6 @@ RUN R -e "install.packages('igraph', repos='http://cran.us.r-project.org')"
 RUN R -e "install.packages('data.table', repos='http://cran.us.r-project.org')"
 RUN R -e "install.packages('graph', repos='http://cran.us.r-project.org')"
 RUN R -e "install.packages('huge', repos='http://cran.us.r-project.org')"
-RUN R -e "install.packages('XMRF', repos='http://cran.us.r-project.org')"
 RUN R -e "install.packages('ZIM', repos='http://cran.us.r-project.org')"
 RUN R -e "install.packages('mvtnorm', repos='http://cran.us.r-project.org')"
 RUN R -e "install.packages('speedglm', repos='http://cran.us.r-project.org')"
@@ -17,11 +16,15 @@ RUN R -e "install.packages('ncvreg', repos='http://cran.us.r-project.org')"
 RUN R -e "install.packages('bnlearn', repos='http://cran.us.r-project.org')"
 RUN R -e "install.packages('doParallel', repos='http://cran.us.r-project.org')"
 RUN R -e "install.packages('SIS', repos='http://cran.us.r-project.org')"
+RUN R -e "install.packages('snowfall', repos='http://cran.us.r-project.org')"
 
+RUN apt install wget -y
+RUN wget https://cran.r-project.org/src/contrib/Archive/XMRF/XMRF_1.0.tar.gz
+RUN echo hej
+RUN R -e 'install.packages("XMRF_1.0.tar.gz", repos = NULL, type="source")'
 
 RUN apt install wget -y
 RUN wget https://cran.r-project.org/src/contrib/Archive/equSA/equSA_1.2.1.tar.gz
 RUN echo hej
 RUN R -e 'install.packages("equSA_1.2.1.tar.gz", repos = NULL, type="source")'
-
 
