--- a/config/config.json
+++ b/config/config.json
@@ -88,10 +88,10 @@
                 {
                     "id": "fges-sem-bic",
                     "faithfulnessAssumed": true,
-                    "score": "sem-bic",
+                    "score": "sem-bic-score",
                     "datatype": "continuous",
                     "samplePrior": 1,
-                    "structurePrior": 1,
+                    "semBicStructurePrior": 1,
                     "penaltyDiscount": [
                         0.75,
                         0.8,
