--- a/workflow/envs/Dockerfile.bdgraph
+++ b/workflow/envs/Dockerfile.bdgraph
@@ -1,3 +1,3 @@
-FROM r-base
+FROM r-base:4.3.1
 
-RUN R -e "install.packages(\"BDgraph\", repos=\"https://cran.rstudio.com\")" --no-save
+RUN R -e 'library(remotes); install_version("BDgraph", "2.72")'
