--- a/workflow/envs/Dockerfile.bidag
+++ b/workflow/envs/Dockerfile.bidag
@@ -1,3 +1,3 @@
 FROM bpimages/pcalg:2.7-8
 
-RUN R -e "install.packages(\"BiDAG\")" 
+RUN R -e 'library(remotes); install_version("BiDAG", "2.1.4")'
