--- a/workflow/envs/Dockerfile.ggally
+++ b/workflow/envs/Dockerfile.ggally
@@ -1,4 +1,3 @@
-FROM r-base
+FROM r-base:4.3.1
 
-RUN R -e "install.packages(\"GGally\")" --no-save
-
+RUN R -e 'library(remotes); install_version("GGally", "2.1.2")'
