--- a/workflow/envs/Dockerfile.rgraphstuff
+++ b/workflow/envs/Dockerfile.rgraphstuff
@@ -1,9 +1,4 @@
-FROM ubuntu:23.10
-
-RUN apt update -y
-RUN apt install r-base r-base-dev -y
-
-RUN R -e "install.packages(\"install_version\")" --no-save
+FROM r-base:4.3.1
 
 RUN R -e "install.packages(\"R.utils\", repos=\"https://cran.rstudio.com\")" --no-save
 RUN R -e "if (!requireNamespace(\"BiocManager\", quietly = TRUE)) {install.packages(\"BiocManager\", repo=\"http://cran.rstudio.com/\")}" --no-save
@@ -12,6 +7,4 @@ RUN R -e "BiocManager::install(\"gRbase\")" --no-save
 RUN R -e "BiocManager::install(\"RBGL\")" --no-save
 RUN R -e "BiocManager::install(\"Rgraphviz\")" --no-save
 RUN R -e "BiocManager::install(\"gRain\")" --no-save
-
-#RUN R -e "install.packages(\"pcalg\")" --no-save
-#RUN R -e "install_version(\"pcalg\", \"2.7-8\")" --no-save
+RUN R -e "install.packages(\"remotes\")" --no-save
