--- a/workflow/envs/Dockerfile.sandbox
+++ b/workflow/envs/Dockerfile.sandbox
@@ -1,6 +1,6 @@
 FROM r-base:4.3.1
 
-RUN R -e "install.packages(\"remotes\")" 
+RUN R -e 'install.packages("remotes")' 
 RUN R -e 'library(remotes); install_version("R.utils", "2.12.2")'
 RUN R -e 'library(remotes); install_version("mvtnorm", "1.2-2")'
 RUN R -e 'library(remotes); install_version("BDgraph", "2.72")'
