--- a/workflow/envs/Dockerfile.rgraphstuff
+++ b/workflow/envs/Dockerfile.rgraphstuff
@@ -1,10 +1,10 @@
 FROM r-base:4.3.1
 
-RUN R -e "install.packages(\"R.utils\", repos=\"https://cran.rstudio.com\")" --no-save
-RUN R -e "if (!requireNamespace(\"BiocManager\", quietly = TRUE)) {install.packages(\"BiocManager\", repo=\"http://cran.rstudio.com/\")}" --no-save
-RUN R -e "BiocManager::install()" --no-save
-RUN R -e "BiocManager::install(\"gRbase\")" --no-save
-RUN R -e "BiocManager::install(\"RBGL\")" --no-save
-RUN R -e "BiocManager::install(\"Rgraphviz\")" --no-save
-RUN R -e "BiocManager::install(\"gRain\")" --no-save
-RUN R -e "install.packages(\"remotes\")" --no-save
+RUN R -e "install.packages(\"remotes\")" 
+RUN R -e "install.packages(\"R.utils\")" 
+RUN R -e "install.packages(\"BiocManager\")" 
+
+RUN R -e "BiocManager::install(\"gRbase\")" 
+RUN R -e "BiocManager::install(\"RBGL\")" 
+RUN R -e "BiocManager::install(\"Rgraphviz\")"
+RUN R -e "BiocManager::install(\"gRain\")" 
