Using manifestst everywhere. Updated docker build script.

--- a/workflow/envs/Dockerfile.benchpress
+++ b/workflow/envs/Dockerfile.benchpress
@@ -1,4 +1,4 @@
-FROM bpimages/rgraphstuff-arm64
+FROM bpimages/rgraphstuff
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get install -y --no-install-recommends build-essential libpq-dev python3.11 python3-pip python3-setuptools python3-dev
