--- a/workflow/envs/Dockerfile.bdgraph
+++ b/workflow/envs/Dockerfile.bdgraph
@@ -2,3 +2,4 @@ FROM r-base:4.3.1
 
 RUN R -e "install.packages('remotes')" 
 RUN R -e 'library(remotes); install_version("BDgraph", "2.72")'
+RUN R -e 'library(remotes); install_version("R.utils", "2.12.2")'
