--- a/workflow/envs/Dockerfile.datascience-python
+++ b/workflow/envs/Dockerfile.datascience-python
@@ -1,4 +1,3 @@
-#FROM civisanalytics/datascience-python
 FROM python:3.11.4-bullseye
 
 RUN pip install contextlib2
@@ -9,3 +8,4 @@ RUN pip install scipy==1.11.2
 RUN pip install scikit-learn==1.3.0
 RUN pip install matplotlib==3.7.2
 RUN pip install seaborn==0.12.2
+RUN pip install statsmodels==0.14.0
