--- a/config/configdocs.json
+++ b/config/configdocs.json
@@ -225,7 +225,7 @@
             "bidag_order_mcmc": [
                 {
                     "id": "omcmc",
-                    "startspace_algorithm": "itsample-bge_am01_endspace",
+                    "input_algorithm_id": "itsample-bge_am01_endspace",
                     "plus1": true,
                     "scoretype": "bge",
                     "chi": null,
