--- a/workflow/rules/structure_learning_algorithms/bdgraph/Dockerfile
+++ b/workflow/rules/structure_learning_algorithms/bdgraph/Dockerfile
@@ -1,3 +1,5 @@
-FROM r-base
+FROM r-base:4.3.1
 
-RUN R -e "install.packages(\"BDgraph\", repos=\"https://cran.rstudio.com\")" --no-save
+RUN R -e "install.packages('remotes')" 
+RUN R -e 'library(remotes); install_version("BDgraph", "2.72")'
+RUN R -e 'library(remotes); install_version("R.utils")'
