--- a/workflow/envs/Dockerfile.huge
+++ b/workflow/envs/Dockerfile.huge
@@ -1,5 +1,11 @@
 FROM r-base:4.3.1
 
 RUN R -e "install.packages('remotes')" 
-RUN R -e 'library(remotes); install_version("BDgraph", "2.72")'
+RUN R -e 'library(remotes); install_version("huge", "1.3.5")'
 RUN R -e 'library(remotes); install_version("R.utils")'
+
+# Cleanup
+RUN rm -rf /tmp/*
+
+
+
