--- a/workflow/envs/Dockerfile.cdt
+++ b/workflow/envs/Dockerfile.cdt
@@ -1,5 +1,6 @@
 FROM python:3.7
 RUN pip install cdt
+RUN pip install torch 
 
 #FROM fentechai/cdt-base:latest
 # #MAINTAINER Diviyan Kalainathan <diviyan@lri.fr>
