--- a/config/config.json
+++ b/config/config.json
@@ -7,7 +7,7 @@
                 "data_id": "standardized",
                 "seed_range": [
                     1,
-                    3
+                    1
                 ]
             }
         ],
@@ -20,26 +20,19 @@
                 "scatter": true,
                 "path": true,
                 "text": false,
-                "ids": [
-                    "fges-sem-bic",
-                    "tabu-bge",
-                    "itsearch-bge",
-                    "pc-gaussCItest"
-                ]
+                "ids": []
             },
             "graph_true_plots": false,
             "graph_true_stats": false,
             "ggally_ggpairs": false,
             "graph_plots": {
                 "ids": [
-                    "fges-sem-bic",
-                    "tabu-bge",
-                    "itsearch-bge",
                     "pc-gaussCItest"
                 ],
                 "graphs": true,
                 "adjmats": true,
                 "diffplots": true,
+                "csvs": true,
                 "graphvizcompare": true
             },
             "mcmc_traj_plots": [
@@ -122,8 +115,6 @@
                     "semBicStructurePrior": 1,
                     "penaltyDiscount": [
                         0.75,
-                        0.8,
-                        1,
                         1.5
                     ],
                     "timeout": null
