--- a/config/config.json
+++ b/config/config.json
@@ -7,7 +7,7 @@
                 "data_id": "standardized",
                 "seed_range": [
                     1,
-                    1
+                    3
                 ]
             }
         ],
@@ -27,13 +27,14 @@
             "ggally_ggpairs": false,
             "graph_plots": {
                 "ids": [
-                    "pc-gaussCItest"
+                    "pc-gaussCItest", "fges-sem-bic", "tabu-bge", "itsearch-bge"
                 ],
-                "graphs": true,
-                "adjmats": true,
-                "diffplots": true,
+                "graphs": false,
+                "adjmats": false,
+                "diffplots": false,
                 "csvs": true,
-                "graphvizcompare": true
+                "cpdags": true,
+                "graphvizcompare": false
             },
             "mcmc_traj_plots": [
                 {
